# youtube-to-ebook

./: .env.example  .gitignore  README.md  SHARE_ON_X.md  SKILL.md  dashboard.py  get_transcripts.py  get_videos.py  launch_dashboard.command  requirements.txt  run_newsletter.sh  send_email.py  write_articles.py
.github/workflows/: newsletter.yml
rust_app/: Cargo.toml  fetch_transcript.py
rust_app/src/: claude.rs  email.rs  epub.rs  main.rs  models.rs  transcript.rs  youtube.rs
