[package]
name = "rust_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dotenv = "0.15.0"
epub-builder = "0.8.2"
html-escape = "0.2.13"
lettre = { version = "0.11.19", features = ["smtp-transport", "builder", "file-transport", "tokio1-rustls-tls"], default-features = false }
pulldown-cmark = "0.13.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.27", features = ["full"] }
